overflow fix and socialmedia icons

--- a/src/styles/abstract/_normalize.scss
+++ b/src/styles/abstract/_normalize.scss
@@ -69,5 +69,4 @@ p[role="large"]{
 }
 section[role="individual-component"]{
     padding: 100px 0;
-    height: fit-content;
 }
