--- a/src/styles/components/_Resumesection.scss
+++ b/src/styles/components/_Resumesection.scss
@@ -1,61 +1,77 @@
 .Resumesectionwrapper {
-    background-color: $color-body;
+    background-color: #f7f7f7;
     padding: 0 20px;
     height: fit-content;
     width: 100%;
   &-header {
     text-align: center;
     margin-bottom: 50px;
+    h1{
+      color: $color-head;
+      font-weight: $font-semibold;
+    }
+    h3{
+      font-weight: $font-regular;
+    }
   }
   &-experience {
-    position: relative;
     &-individual {
       display: flex;
     }
+  }
+  &-button{
+    width: 100%;
+    text-align: center;
+    padding-top: 100px;
   }
 }
 .Resumeborder {
   position: relative;
   border-left: 3px solid $color-grey;
   left: 3rem;
-  width: 50%;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  margin-left: 50px;
   &-boxes{
     display: flex;
     flex-direction: column;
-    // border: 2px solid red;
-    padding-left: 70px;
+    padding-left: 60px;
     gap: 20px;
     justify-content: space-between;
     margin-top: 20px;
     .box{
-        border: 2px solid blue;
+        // border: 2px solid blue;
         display: flex;
-        width: 390px;
+        width: 425px;
         height: 180px;
         padding: 30px;
         background-color: $color-white;
+        border-radius: 10px;
     }
   }
 }
 .circle{
     height: 100%;
     position: absolute;
-    left: -0.5rem;
+    left: -0.45rem;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    // justify-content: space-between;
+    margin-top: 20%;
+    gap: 30%;
     z-index: 3;
     top: 0;
     span{
-        width: 16px;
-        height: 16px;
+        width: 14px;
+        height: 14px;
         border-radius: 50%;
         background-color: $color-secondary;
         display: flex;
         justify-content: center;
         align-items: center;
         svg{
-            font-size: 8px;
+            font-size: 6px;
             color: $primary;
         }
     }
